# nanoGPT

./: .gitignore  .pre-commit-config.yaml  bench.py  configurator.py  model.py  pyproject.toml  sample.py  train.py
.devcontainer/: devcontainer.json
data/openwebtext/: prepare.py
data/shakespeare_char/: prepare.py
docker/: dockerfile  entry_script.sh  requirements.txt  zshrc
