[project]
name = "nanoGPT"
version = "0.0.0"
description = "A small GPT model"
readme = "README.md"
requires-python = ">=3.7"

# This is either text indicating the license for the distribution, or a file
# that contains the license
# https://packaging.python.org/en/latest/specifications/core-metadata/#license
# license = { file = "LICENSE.txt" }

keywords = ["ai", "GPT"] # Optional

# This should be your name or the name of the organization who originally
# authored the project, and a valid email address corresponding to the name
# listed.
authors = [{ name = "Sushobhan Ghosh", email = "sushobhan04ghosh@gmail.com" }]

# This should be your name or the names of the organization who currently
# maintains the project, and a valid email address corresponding to the name
# listed.
maintainers = [{ name = "Sushobhan Ghosh", email = "sushobhan@descript.com" }]

dependencies = [ # Optional
    "torch>=2.0.0",
    "wandb",
    "tiktoken",
    "transformers",
]

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts] # Optional
sample = "sample:main"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nanoGPT"]

[tool.ruff]
line-length = 450
select = ["E", "F"]
